proxy/traefik/01-deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: reverse-proxy
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --log.level=DEBUG
            - --api
            - --api.insecure=true
            - --providers.kubernetescrd
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
          ports:
            - name: web
              containerPort: 80
