proxy/traefik/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: reverse-proxy
spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: reverse-proxy
  labels:
    app: dashboard-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: traefik
