proxy/traefik/04-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: proxy
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.200
    metallb.universe.tf/allow-shared-ip: homelab-vip
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
    - name: mx-federation
      port: 8448
      targetPort: mx-federation
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: proxy
  labels:
    app: dashboard
spec:
  selector:
    app: traefik
  ports:
    - name: dashboard
      port: 8080
      targetPort: dashboard
