proxy/traefik/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dashboard.k8s.test`)
      services:
        - kind: TraefikService
          name: api@internal
