proxy/traefik/05-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-oauth2
  namespace: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dashboard.polarys.im`) && PathPrefix(`/oauth2/`)
      priority: 100
      services:
        - kind: Service
          name: oauth2-proxy
          namespace: proxy
          port: 4180
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dashboard.polarys.im`)
      middlewares:
        - name: oauth2-proxy-auth
          namespace: proxy
      services:
        - kind: TraefikService
          name: api@internal
